tests/spec/parse/snapshots/parse_string_crlf_normalised.snap
---
source: tests/spec/parse/mod.rs
assertion_line: 3653
description: "input: fn test() { let s = \"a\r\nb\" }"
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 3,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Block {
            items: [
                Let {
                    binding: Binding {
                        pattern: Identifier {
                            identifier: "s",
                            span: Span {
                                file_id: 0,
                                byte_offset: 16,
                                byte_length: 1,
                            },
                        },
                        annotation: None,
                        typed_pattern: None,
                        ty: Var {
                            id: uninferred,
                        },
                    },
                    value: Literal {
                        literal: String {
                            value: "a\nb",
                            raw: false,
                        },
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 20,
                            byte_length: 6,
                        },
                    },
                    mutable: false,
                    mut_span: None,
                    else_block: None,
                    else_span: None,
                    typed_pattern: None,
                    ty: Var {
                        id: uninferred,
                    },
                    span: Span {
                        file_id: 0,
                        byte_offset: 12,
                        byte_length: 14,
                    },
                },
            ],
            ty: Var {
                id: uninferred,
            },
            span: Span {
                file_id: 0,
                byte_offset: 10,
                byte_length: 18,
            },
        },
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 0,
            byte_length: 28,
        },
    },
]
