tests/spec/parse/snapshots/raw_string_literal.snap
---
source: tests/spec/parse/mod.rs
description: "input: \nfn test() { `hello world` }\n"
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Variable(
            -1,
        ),
        visibility: Private,
        body: Block {
            items: [
                Literal {
                    literal: RawString(
                        "hello world",
                    ),
                    ty: Variable(
                        -1,
                    ),
                    span: Span {
                        file_id: 0,
                        byte_offset: 13,
                        byte_length: 13,
                    },
                },
            ],
            ty: Variable(
                -1,
            ),
            span: Span {
                file_id: 0,
                byte_offset: 11,
                byte_length: 17,
            },
        },
        ty: Variable(
            -1,
        ),
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 27,
        },
    },
]
