tests/spec/parse/snapshots/value_enum_negative_i64_min.snap
---
source: tests/spec/parse/mod.rs
description: "input: \nenum Time: int64 {\n  Earliest = -9223372036854775808,\n}\n"
---
[
    ValueEnum {
        doc: None,
        name: "Time",
        name_span: Span {
            file_id: 0,
            byte_offset: 6,
            byte_length: 4,
        },
        underlying_ty: Some(
            Constructor {
                name: "int64",
                params: [],
                span: Span {
                    file_id: 0,
                    byte_offset: 12,
                    byte_length: 5,
                },
            },
        ),
        variants: [
            ValueEnumVariant {
                doc: None,
                name: "Earliest",
                name_span: Span {
                    file_id: 0,
                    byte_offset: 22,
                    byte_length: 8,
                },
                value: Integer {
                    value: 9223372036854775808,
                    text: Some(
                        "-9223372036854775808",
                    ),
                },
                value_span: Span {
                    file_id: 0,
                    byte_offset: 31,
                    byte_length: 22,
                },
            },
        ],
        visibility: Public,
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 55,
        },
    },
]
